# SecureMe

./: README.md
proxy/: package-lock.json  package.json  proxy.js
server/: package-lock.json  package.json  server.ts  tsconfig.json
server/controllers/: device.controller.ts  user.controller.ts
server/middlewares/: auth.middleware.ts  upload.middleware.ts
server/models/resources/: auth.model.ts  callback.model.ts  jwt.model.ts  request.model.ts  websocket.model.ts
server/routes/: device.route.ts  user.route.ts
server/schemas/: user.schema.ts
server/utility/: helper.ts  validation.ts
server/utility/redis/: redis.operations.ts
smart-client/: .gitignore  CMakeLists.txt  run_android.sh  run_debug_terminal_android.sh
smart-client/android/: AndroidManifest.xml  build.gradle
smart-client/android/res/xml/: device_admin_sample.xml
smart-client/android/src/tech/secureme/: BootServiceBroadcastReceiver.java  MyActivity.java  NotificationClient.java  SecureMeDeviceAdminReceiver.java
smart-client/android/src/tech/secureme/services/: BootService.java  CameraService.java  LocationService.java  MyFirebaseMessagingService.java  TrackLocationService.java  WebService.java
smart-client/qml/: AppStyle.qml  Auth.qml  CustomButton.qml  CustomTextField.qml  home.qml  main.qml
smart-client/src/: AndroidService.cpp  AndroidService.h  Config.cpp  Config.h  NetworkManager.cpp  NetworkManager.h  NotificationManager.cpp  NotificationManager.h  StorageManager.cpp  StorageManager.h  main.cpp
smart-client/src/services/: BootService.cpp  BootService.h  CameraService.cpp  CameraService.h  LocationService.cpp  LocationService.h  TrackLocationService.cpp  TrackLocationService.h  WebService.cpp  WebService.h
smart-client/src/utility/: device.cpp  device.h  permission.cpp  permissions.h
web-client/: package-lock.json  package.json  tailwind.config.js
web-client/public/: manifest.json
web-client/src/: App.tsx  Router.tsx  index.tsx
web-client/src/components/: AuthModal.tsx  Functionalities.tsx  Hero.tsx  LockIcon.tsx  Map.tsx  NavBar.tsx  SignInModal.tsx  SignUpModal.tsx  allDevices.tsx
web-client/src/components/authentication/: AuthModal.tsx
web-client/src/components/authentication/SignIn/: SignInModal.tsx  useSignIn.ts
web-client/src/components/authentication/SignUp/: SignUpModal.tsx  useSignUp.ts
web-client/src/components/functionalities/BootHistory/: BootHistory.tsx
web-client/src/components/functionalities/IncorrectPassword/: IncorrectPassword.tsx  useIncorrectPassword.ts  useIncorrectPassword.tsx
web-client/src/components/functionalities/models/: accordion.model.ts
web-client/src/components/icons/: EyeFilledIcon.jsx  EyeSlashFilledIcon.jsx  UserIcon.tsx
web-client/src/contexts/: WebSocket.tsx
web-client/src/models/: auth.model.ts  location.model.ts
web-client/src/pages/: Home.tsx  Login.tsx  Register.tsx
web-client/src/styles/: functionalities.css  global.css  main.css
(+2 files in other folders)
